feat: 补齐模型指标归因与成本治理进度